[gd_scene load_steps=44 format=3 uid="uid://5writxsrje6c"]

[ext_resource type="Script" path="res://scenes/Enemies/enemy.gd" id="1_5qsc4"]
[ext_resource type="Script" path="res://scripts/States/state_machine.gd" id="2_vqwxk"]
[ext_resource type="Script" path="res://scenes/Enemies/States/EnemyIdle.gd" id="3_mwb48"]
[ext_resource type="Script" path="res://scenes/Enemies/States/EnemyWander.gd" id="4_gess7"]
[ext_resource type="Script" path="res://scenes/Enemies/States/EnemyChase.gd" id="5_xrmtm"]
[ext_resource type="Script" path="res://scenes/Enemies/States/EnemyAttack.gd" id="6_xelrh"]
[ext_resource type="Script" path="res://scenes/Enemies/States/EnemySwitch.gd" id="7_84bb8"]
[ext_resource type="Script" path="res://scenes/Enemies/States/EnemyDamage.gd" id="8_phrry"]
[ext_resource type="Texture2D" uid="uid://dgnbrwrrck2ye" path="res://assets/sprites/Minifantasy_Creatures_Assets/Beasts/Warg/WargAttack.png" id="9_tydpu"]
[ext_resource type="Texture2D" uid="uid://cpb3vges1r2tw" path="res://assets/sprites/Minifantasy_Creatures_Assets/Beasts/Warg/WargDmg.png" id="10_naj71"]
[ext_resource type="Texture2D" uid="uid://dcnb1yyyegpqn" path="res://assets/sprites/Minifantasy_Creatures_Assets/Beasts/Warg/WargIdle.png" id="11_va3s6"]
[ext_resource type="Texture2D" uid="uid://bs0q8ltiym7qv" path="res://assets/sprites/Minifantasy_Creatures_Assets/Beasts/Warg/WargWalk.png" id="12_a3b0y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bwl2k"]
size = Vector2(11, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_frfmx"]
size = Vector2(18, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ak4m"]
size = Vector2(45, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w5wbo"]
size = Vector2(11, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7takv"]
size = Vector2(10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu3g1"]
atlas = ExtResource("9_tydpu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xow6"]
atlas = ExtResource("9_tydpu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cepng"]
atlas = ExtResource("9_tydpu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7qs8"]
atlas = ExtResource("9_tydpu")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l80sv"]
atlas = ExtResource("10_naj71")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xbbt"]
atlas = ExtResource("10_naj71")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d8e4"]
atlas = ExtResource("10_naj71")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmoyn"]
atlas = ExtResource("10_naj71")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpxyx"]
atlas = ExtResource("11_va3s6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1vxn"]
atlas = ExtResource("11_va3s6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sltoc"]
atlas = ExtResource("11_va3s6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uppb"]
atlas = ExtResource("11_va3s6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wm3u"]
atlas = ExtResource("11_va3s6")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7v23"]
atlas = ExtResource("11_va3s6")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgp5y"]
atlas = ExtResource("11_va3s6")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bb3nm"]
atlas = ExtResource("11_va3s6")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax644"]
atlas = ExtResource("11_va3s6")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_77e0i"]
atlas = ExtResource("11_va3s6")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhbi1"]
atlas = ExtResource("11_va3s6")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayuig"]
atlas = ExtResource("11_va3s6")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ohaw"]
atlas = ExtResource("12_a3b0y")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jr1i"]
atlas = ExtResource("12_a3b0y")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmvhk"]
atlas = ExtResource("12_a3b0y")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmqn7"]
atlas = ExtResource("12_a3b0y")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_datdj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu3g1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xow6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cepng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7qs8")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l80sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xbbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d8e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmoyn")
}],
"loop": false,
"name": &"damage",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpxyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1vxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sltoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uppb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wm3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7v23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgp5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bb3nm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax644")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77e0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhbi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayuig")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ohaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jr1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmvhk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmqn7")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l0lx4"]
size = Vector2(24, 12)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_5qsc4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -8)
shape = SubResource("RectangleShape2D_bwl2k")

[node name="FSM" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_vqwxk")
initial_state = NodePath("EnemyWander")

[node name="EnemyIdle" type="Node" parent="FSM" node_paths=PackedStringArray("animated_sprite", "pivot", "enemy")]
script = ExtResource("3_mwb48")
animated_sprite = NodePath("../../Pivot/AnimatedSprite2D")
pivot = NodePath("../../Pivot")
enemy = NodePath("../..")

[node name="Timer" type="Timer" parent="FSM/EnemyIdle"]

[node name="EnemyWander" type="Node" parent="FSM" node_paths=PackedStringArray("animated_sprite", "enemy", "pivot")]
script = ExtResource("4_gess7")
animated_sprite = NodePath("../../Pivot/AnimatedSprite2D")
enemy = NodePath("../..")
pivot = NodePath("../../Pivot")

[node name="EnemyChase" type="Node" parent="FSM" node_paths=PackedStringArray("animated_sprite", "enemy", "pivot")]
script = ExtResource("5_xrmtm")
animated_sprite = NodePath("../../Pivot/AnimatedSprite2D")
enemy = NodePath("../..")
pivot = NodePath("../../Pivot")

[node name="EnemyAttack" type="Node" parent="FSM" node_paths=PackedStringArray("animated_sprite", "enemy")]
script = ExtResource("6_xelrh")
animated_sprite = NodePath("../../Pivot/AnimatedSprite2D")
enemy = NodePath("../..")

[node name="EnemySwitch" type="Node" parent="FSM"]
script = ExtResource("7_84bb8")

[node name="EnemyDamage" type="Node" parent="FSM" node_paths=PackedStringArray("animated_sprite", "root_node_enemy")]
script = ExtResource("8_phrry")
animated_sprite = NodePath("../../Pivot/AnimatedSprite2D")
root_node_enemy = NodePath("../..")

[node name="Pivot" type="Node2D" parent="."]

[node name="AreaAttack" type="Area2D" parent="Pivot"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/AreaAttack"]
position = Vector2(9, -10)
shape = SubResource("RectangleShape2D_frfmx")
debug_color = Color(0.957771, 0.170595, 0.30209, 0.42)

[node name="AreaChase" type="Area2D" parent="Pivot"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/AreaChase"]
position = Vector2(22.5, -10)
shape = SubResource("RectangleShape2D_7ak4m")

[node name="AreaCollide" type="Area2D" parent="Pivot"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/AreaCollide"]
position = Vector2(-0.5, -8)
shape = SubResource("RectangleShape2D_w5wbo")
debug_color = Color(0.659138, 0.515126, 0, 0.42)

[node name="AreaGround" type="Area2D" parent="Pivot"]
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/AreaGround"]
position = Vector2(9, 1)
shape = SubResource("RectangleShape2D_7takv")
debug_color = Color(0, 0.644914, 0.271235, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Pivot"]
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_datdj")
animation = &"run"

[node name="AreaChaseBack" type="Area2D" parent="Pivot"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/AreaChaseBack"]
position = Vector2(-12, -10)
shape = SubResource("RectangleShape2D_l0lx4")

[connection signal="body_entered" from="Pivot/AreaAttack" to="FSM/EnemyChase" method="_on_area_attack_body_entered"]
[connection signal="body_exited" from="Pivot/AreaAttack" to="FSM/EnemyChase" method="_on_area_attack_body_exited"]
[connection signal="body_entered" from="Pivot/AreaChase" to="FSM/EnemyIdle" method="_on_area_chase_body_entered"]
[connection signal="body_entered" from="Pivot/AreaChase" to="FSM/EnemyWander" method="_on_area_chase_body_entered"]
[connection signal="body_entered" from="Pivot/AreaChase" to="FSM/EnemyChase" method="_on_area_chase_body_entered"]
[connection signal="body_exited" from="Pivot/AreaChase" to="FSM/EnemyChase" method="_on_area_chase_body_exited"]
[connection signal="area_entered" from="Pivot/AreaCollide" to="." method="_on_area_collide_area_entered"]
[connection signal="body_entered" from="Pivot/AreaGround" to="FSM/EnemyWander" method="_on_area_ground_body_entered"]
[connection signal="body_entered" from="Pivot/AreaGround" to="FSM/EnemyChase" method="_on_area_ground_body_entered"]
[connection signal="body_exited" from="Pivot/AreaGround" to="FSM/EnemyWander" method="_on_area_ground_body_exited"]
[connection signal="body_exited" from="Pivot/AreaGround" to="FSM/EnemyChase" method="_on_area_ground_body_exited"]
[connection signal="body_entered" from="Pivot/AreaChaseBack" to="FSM/EnemyIdle" method="_on_area_chase_back_body_entered"]
[connection signal="body_entered" from="Pivot/AreaChaseBack" to="FSM/EnemyWander" method="_on_area_chase_back_body_entered"]
